# grok-netcode

./: .gitignore  LICENSE  README.md  bundle.js  gh-pages-update  grok-netcode.cabal  package.json  server.js  stack.yaml  tsconfig.json  webpack.config.js
docs/: bundle.js  index.html
haskell/: .gitignore  README.md  grok-netcode.cabal  stack.yaml
haskell/src/: Game.hs  Input.hs  Main.hs  Network.hs  Palette.hs  Render.hs  Simulation.hs
public/: index.html
src/: ControlsUI.hs  Game.hs  Input.hs  Main.hs  Network.hs  Palette.hs  Simulation.hs  Utils.hs  client.ts  input.ts  main.ts  render.ts  server.ts  state.ts  utils.ts
typescript/: .gitignore  package.json  webpack.config.js
typescript/public/: index.html
typescript/src/: main.ts  state.ts
