name:                grok-netcode
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable grok-netcode
  hs-source-dirs:      src
  other-modules:       Game, Input, Network, Render, Simulation
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss, random, transformers, uuid